# pangeo-forge-gcs-bakery

./: .env  .gitignore  Makefile  README.md  TODO.md  destroy.sh  install.sh  main.tf  prepare.sh  providers.tf  test.sh
.github/workflows/: shellcheck.yaml  terraform-linter.yaml
kubernetes/: prefect-agent-rbac.role.yaml  prefect-agent-rbac.rolebinding.yaml  prefect-agent.deployment.yaml  prefect-agent.namespace.yaml
scripts/: check-prereqs.sh  deploy.sh  destroy.sh  generate-yaml.sh  get-grafana-admin.sh  get-info.sh  init.sh  install.sh  k8s-connect.sh  loki.sh  prepare.sh  test-flow.sh  test.sh
terraform/: cluster.tf  main.tf  network.tf  providers.tf  storage.tf  tags.tf  variables.tf
test/: oisst_recipe.py  pyproject.toml
test/recipes/: oisst_recipe.py
